@@ -1,10 +1,11 @@
 package pw.chew.chanserv.listeners;
 
-import net.dv8tion.jda.api.entities.Emote;
 import net.dv8tion.jda.api.entities.Message;
-import net.dv8tion.jda.api.events.message.guild.GenericGuildMessageEvent;
-import net.dv8tion.jda.api.events.message.guild.GuildMessageReceivedEvent;
-import net.dv8tion.jda.api.events.message.guild.GuildMessageUpdateEvent;
+import net.dv8tion.jda.api.entities.emoji.Emoji;
+import net.dv8tion.jda.api.entities.emoji.RichCustomEmoji;
+import net.dv8tion.jda.api.events.message.GenericMessageEvent;
+import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
+import net.dv8tion.jda.api.events.message.MessageUpdateEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import org.jetbrains.annotations.NotNull;
 
@@ -13,9 +14,9 @@ import java.util.Locale;
 
 public class RoryListener extends ListenerAdapter {
     @Override
-    public void onGuildMessageReceived(@NotNull GuildMessageReceivedEvent event) {
+    public void onMessageReceived(@NotNull MessageReceivedEvent event) {
         // Ensure this is the rory fanclub
-        if (!event.getGuild().getId().equals("134445052805120001")) return;
+        if (!event.isFromGuild() || !event.getGuild().getId().equals("134445052805120001")) return;
 
         if (event.getMessage().getContentRaw().toLowerCase(Locale.ROOT).contains("rory")) {
             addReaction(event.getMessage(), event);
@@ -23,9 +24,9 @@ public class RoryListener extends ListenerAdapter {
     }
 
     @Override
-    public void onGuildMessageUpdate(GuildMessageUpdateEvent event) {
+    public void onMessageUpdate(MessageUpdateEvent event) {
         // Ensure this is the rory fanclub
-        if (!event.getGuild().getId().equals("134445052805120001")) return;
+        if (!event.isFromGuild() || !event.getGuild().getId().equals("134445052805120001")) return;
 
         if (event.getMessage().getContentRaw().toLowerCase(Locale.ROOT).contains("rory")) {
             addReaction(event.getMessage(), event);
@@ -37,13 +38,15 @@ public class RoryListener extends ListenerAdapter {
      * @param message The message
      * @param event The event to get the server from
      */
-    public void addReaction(Message message, GenericGuildMessageEvent event) {
+    public void addReaction(Message message, GenericMessageEvent event) {
+        // Ensure this is the rory fanclub
+        if (!event.isFromGuild() || !event.getGuild().getId().equals("134445052805120001")) return;
         // Get all emotes
-        List<Emote> emotes = event.getGuild().getEmoteCache().stream().filter(emote -> emote.getName().toLowerCase(Locale.ROOT).contains("rory")).collect(java.util.stream.Collectors.toList());
+        List<RichCustomEmoji> emotes = event.getGuild().getEmojiCache().stream().filter(emote -> emote.getName().toLowerCase(Locale.ROOT).contains("rory")).toList();
 
         // Get a random emote from the list using a random number generator
         int random = (int) (Math.random() * emotes.size());
-        Emote emote = emotes.get(random);
-        message.addReaction(String.format("%s:%s", emote.getName(), emote.getId())).queue();
+        Emoji emote = emotes.get(random);
+        message.addReaction(emote).queue();
     }
 }
